--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,8 @@ ShortName: Variable Selection
 Date: 2021-06-06
 Lifecycle: experimental
 Authors@R: c(
-  person(given = "Neil", family = "Hatfield", email = "njh5464@psu.edu", role = c("aut", "cre"))
+  person(given = "Neil", family = "Hatfield", email = "njh5464@psu.edu", role = c("aut", "cre")),
+  person(given = "Yijun", family = "Yao", role = c("aut"))
  )
 Chapter: Chapter 6
 Description: This app introduces the concept of variable selection.
