things on checklist

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,8 @@ Authors@R: c(
   person(given = "Yijun", family = "Yao", role = c("ctb"))
  )
 Chapter: Chapter 6
-Description: This app introduces the concept of variable selection.
+Description: This app introduces the concept of variable selection. It introduces three 
+variable selection criteria: Adjusted R-Squared, BIC Criterion and Mallow's Cp.
 LearningObjectives: c(
   "The student will be able to do variable selection based on three criteria:
   adjusted R-Squared, BIC criterion and Mallow's Cp.",
