--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,6 +4,7 @@ Date: 2019-08-01
 Lifecycle: experimental
 Authors@R: c(
   person(given = "Neil", family = "Hatfield", email = "njh5464@psu.edu", role = c("aut", "cre")),
+  person(given = "Dennis", family = "Pearl", email = "dkp13@psu.edu", role = c("aut")),
   person(given = "Zhiro", family = "Wang", role = c("aut")),
   person(given = "Zhoulin", family = "Luo", role = c("ctb")),
   person(given = "Robert", family = "Chappell", role = c("ctb")),
